[package]
name = "passkey-demo-client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
passkey = "0.1.0"
public-suffix = "0.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.37"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.64", features = ["PublicKeyCredential"]}
js-sys = "0.3.64"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.0"
url = "2.4.1"
once_cell = "1.18.0"
base64urlsafedata = "0.1.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
